Fix unexpected horizontal scroll in RTL languages

--- a/styles/controllers/grid/grid.less
+++ b/styles/controllers/grid/grid.less
@@ -575,9 +575,7 @@
 
 	// Headers aren't needed in file grids
 	thead {
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
+		&:extend(.pkp_screen_reader all);
 	}
 
 	.pkp_linkaction_downloadFile {
